gnome-proxy: use lock to protect settings

Since it's fine for multiple threads to be calling into our module at
the same time, we need to protect shared data, like the settings, with
a lock. The problem was identified in bug 650439. This patch fixes the
problem.

https://bugzilla.gnome.org/show_bug.cgi?id=650439

Signed-off-by: David Zeuthen <davidz@redhat.com>